# floating-point-ranger

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  pyproject.toml
agent/: fpr-amd-agent.service  fpr_amd_agent.py
gpu_manager/: __init__.py  admission.py  amd.py  app.py  config.py  dashboard.py  gates.py  models.py  mps.py  owners.py  presence.py  prewarm.py  probes.py  rogue.py  sources.py  stall.py  util.py
mcp/: gpu_manager_mcp.py
systemd/: gpu-manager-prewarm.service  gpu-manager-prewarm.timer  gpu-manager.service  nvidia-mps.service
tests/: test_admission_mps.py  test_amd_routing.py  test_spillover.py  test_stall_interactive.py  test_zombie_reaping.py
